--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "illustration-collation",
+  "name": "collate-images",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "babel-preset-env": "^1.5.2",
     "react-scripts": "0.6.1"
   },
   "dependencies": {
